integral image function

--- a/assignment1_helper.ipynb
+++ b/assignment1_helper.ipynb
@@ -75,24 +75,23 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "image = Image(\"sample_image.jpg\")\n",
-        "img,sqr = toArrayAndSquare(image)\n",
-        "rows, columns = len(img), len(img[0])\n",
-        "s = [ [ 0 for y in range(columns) ] for x in range(rows) ]\n",
-        "integral_image = [ [ 0 for y in range(columns) ] for x in range(rows) ]\n",
-        "# calculating s matrix\n",
-        "for i in range(0, rows):\n",
-        "    sum = 0\n",
-        "    for j in range(0, columns):\n",
-        "        sum += img[i][j]\n",
-        "        s[i][j] = sum\n",
-        "# calculating integral matrix\n",
-        "for i in range(0, rows):\n",
-        "    for j in range(0, columns):\n",
-        "        if (i == 0):\n",
-        "            integral_image[i][j] = s[i][j]\n",
-        "        else:\n",
-        "            integral_image[i][j] = integral_image[i][j-1] + s[i][j]"
+        "def integralArray(img):\n",
+        "    rows, columns = len(img), len(img[0])\n",
+        "    s = [ [ 0 for y in range(columns) ] for x in range(rows) ]\n",
+        "    integral_image = [ [ 0 for y in range(columns) ] for x in range(rows) ]\n",
+        "    # calculating s matrix\n",
+        "    for i in range(0, rows):\n",
+        "        sum = 0\n",
+        "        for j in range(0, columns):\n",
+        "            sum += img[i][j]\n",
+        "            s[i][j] = sum\n",
+        "    # calculating integral matrix\n",
+        "    for i in range(0, rows):\n",
+        "        for j in range(0, columns):\n",
+        "            if (i == 0):\n",
+        "                integral_image[i][j] = s[i][j]\n",
+        "            else:\n",
+        "                integral_image[i][j] = integral_image[i][j-1] + s[i][j]"
       ]
     },
     {
