--- a/assignment1_helper.ipynb
+++ b/assignment1_helper.ipynb
@@ -71,7 +71,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -91,7 +91,48 @@
         "            if (i == 0):\n",
         "                integral_image[i][j] = s[i][j]\n",
         "            else:\n",
-        "                integral_image[i][j] = integral_image[i][j-1] + s[i][j]"
+        "                integral_image[i][j] = integral_image[i][j-1] + s[i][j]\n",
+        "    return integral_image            "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def localSum(integral, tL_i, tL_j, bR_i, bR_j):\n",
+        "    upper_sum = 0\n",
+        "    left_sum =  0\n",
+        "    if (tL_i > 0):\n",
+        "        upper_sum = integral[tL_i-1][bR_j]\n",
+        "    if (tL_j > 0):\n",
+        "        left_sum =  integral[bR_i][tL_j-1]   \n",
+        "    return integral[bR_i][bR_j] - upper_sum - left_sum + integral[0][0]\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "TypeError",
+          "evalue": "'module' object is not callable",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[1;32m/Users/alaaabdelazeem/Desktop/Uni/Sem9/CV/Asg 1/assignment1_helper.ipynb Cell 7'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/alaaabdelazeem/Desktop/Uni/Sem9/CV/Asg%201/assignment1_helper.ipynb#ch0000009?line=0'>1</a>\u001b[0m image1 \u001b[39m=\u001b[39m Image(\u001b[39m\"\u001b[39;49m\u001b[39msample_image.jpg\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/alaaabdelazeem/Desktop/Uni/Sem9/CV/Asg%201/assignment1_helper.ipynb#ch0000009?line=1'>2</a>\u001b[0m img,sqr \u001b[39m=\u001b[39m toArrayAndSquare(image1)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/alaaabdelazeem/Desktop/Uni/Sem9/CV/Asg%201/assignment1_helper.ipynb#ch0000009?line=2'>3</a>\u001b[0m integralArray \u001b[39m=\u001b[39m integralArray(img)\n",
+            "\u001b[0;31mTypeError\u001b[0m: 'module' object is not callable"
+          ]
+        }
+      ],
+      "source": [
+        "image1 = Image(\"sample_image.jpg\")\n",
+        "img,sqr = toArrayAndSquare(image1)\n",
+        "integralArray = integralArray(img)\n",
+        "print(integralArray)"
       ]
     },
     {
